Fix activating the Selection Mode with a keyboard shortcut

If a spacebar is used as a keyboard shortcut to activate the Selection Mode, then allow this shortcut to be triggered only if the view has a keyboard focus.

BUG: 465489
(cherry picked from commit 7b6a67e520c04f56b4b05fa26b252177398df6df)